--- a/src/main/resources/templates/pages/lecture/learning_map.html
+++ b/src/main/resources/templates/pages/lecture/learning_map.html
@@ -49,7 +49,7 @@
             </div>
         </div>
         <!-- Body -->
-        <div class="overflow-auto" style="min-height:1000px; width:850px;">
+        <div class="overflow-auto" style="min-height:1550px; width:850px;">
             <div class="container" style="position:absolute;">
                 <!--============================================ Level #1 =================================================-->
                 <div class="btn elem-map"
@@ -280,11 +280,11 @@
 
                 <!--++++++++++ Java +++++++++++-->
                 <a class="elem-map btn"
-                     type="button"
+                   type="button"
                    data-bs-toggle="offcanvas"
                    data-bs-target="#java_syntax"
                    aria-controls="java_syntax"
-                     style="left:600px; top:375px;">
+                   style="left:600px; top:375px;">
                     <p class="text-center mt-1 fw-bold">Java</p>
                 </a>
 
@@ -468,7 +468,278 @@
                 </div>
 
                 <div class="line-map" style="height:50px; width:2px; left:375px; top:700px;"></div>
-                <div class="line-map" style="height:2px; width:750px; left:100px; top:750px;"></div>
+                <div class="line-map" style="height:2px; width:600px; left:100px; top:750px;"></div>
+
+                <div class="line-map" style="height:25px; width:2px; left:100px; top:750px;"></div>
+                <div class="line-map" style="height:25px; width:2px; left:200px; top:750px;"></div>
+                <div class="line-map" style="height:25px; width:2px; left:300px; top:750px;"></div>
+                <div class="line-map" style="height:25px; width:2px; left:400px; top:750px;"></div>
+                <div class="line-map" style="height:25px; width:2px; left:500px; top:750px;"></div>
+                <div class="line-map" style="height:25px; width:2px; left:600px; top:750px;"></div>
+                <div class="line-map" style="height:25px; width:2px; left:700px; top:750px;"></div>
+
+                <div class="line-map" style="height:25px; width:2px; left:100px; top:825px;"></div>
+                <div class="line-map" style="height:25px; width:2px; left:200px; top:825px;"></div>
+                <div class="line-map" style="height:25px; width:2px; left:300px; top:825px;"></div>
+                <div class="line-map" style="height:25px; width:2px; left:400px; top:825px;"></div>
+                <div class="line-map" style="height:25px; width:2px; left:500px; top:825px;"></div>
+                <div class="line-map" style="height:25px; width:2px; left:600px; top:825px;"></div>
+                <div class="line-map" style="height:25px; width:2px; left:700px; top:825px;"></div>
+
+                <div class="line-map" style="height:25px; width:2px; left:100px; top:900px;"></div>
+                <div class="line-map" style="height:25px; width:2px; left:200px; top:900px;"></div>
+                <div class="line-map" style="height:25px; width:2px; left:300px; top:900px;"></div>
+                <div class="line-map" style="height:25px; width:2px; left:400px; top:900px;"></div>
+                <div class="line-map" style="height:25px; width:2px; left:500px; top:900px;"></div>
+                <div class="line-map" style="height:25px; width:2px; left:600px; top:900px;"></div>
+                <div class="line-map" style="height:25px; width:2px; left:700px; top:900px;"></div>
+
+                <div class="line-map" style="height:25px; width:2px; left:100px; top:975px;"></div>
+                <div class="line-map" style="height:25px; width:2px; left:200px; top:975px;"></div>
+                <div class="line-map" style="height:25px; width:2px; left:300px; top:975px;"></div>
+                <div class="line-map" style="height:25px; width:2px; left:400px; top:975px;"></div>
+                <div class="line-map" style="height:25px; width:2px; left:500px; top:975px;"></div>
+                <div class="line-map" style="height:25px; width:2px; left:600px; top:975px;"></div>
+                <div class="line-map" style="height:25px; width:2px; left:700px; top:975px;"></div>
+
+                <div class="line-map" style="height:25px; width:2px; left:100px; top:1050px;"></div>
+                <div class="line-map" style="height:25px; width:2px; left:200px; top:1050px;"></div>
+                <div class="line-map" style="height:25px; width:2px; left:300px; top:1050px;"></div>
+                <div class="line-map" style="height:25px; width:2px; left:400px; top:1050px;"></div>
+                <div class="line-map" style="height:25px; width:2px; left:500px; top:1050px;"></div>
+                <div class="line-map" style="height:25px; width:2px; left:600px; top:1050px;"></div>
+                <div class="line-map" style="height:25px; width:2px; left:700px; top:1050px;"></div>
+
+                <div class="line-map" style="height:25px; width:2px; left:100px; top:1125px;"></div>
+                <div class="line-map" style="height:25px; width:2px; left:200px; top:1125px;"></div>
+                <div class="line-map" style="height:25px; width:2px; left:300px; top:1125px;"></div>
+                <div class="line-map" style="height:25px; width:2px; left:400px; top:1125px;"></div>
+                <div class="line-map" style="height:25px; width:2px; left:500px; top:1125px;"></div>
+                <div class="line-map" style="height:25px; width:2px; left:600px; top:1125px;"></div>
+                <div class="line-map" style="height:25px; width:2px; left:700px; top:1125px;"></div>
+
+                <!-- JS -->
+                <div class="elem-map btn"
+                     style="left:75px; top:775px;">
+                    <p class="text-center mt-1 fw-bold">JS</p>
+                </div>
+
+                <div class="elem-map btn"
+                     style="left:75px; top:850px;">
+                    <p class="text-center mt-1 fw-bold">C++</p>
+                </div>
+
+                <div class="elem-map btn"
+                     style="left:75px; top:925px;">
+                    <p class="text-center mt-1 fw-bold">C++</p>
+                </div>
+
+                <div class="elem-map btn"
+                     style="left:75px; top:1000px;">
+                    <p class="text-center mt-1 fw-bold">C++</p>
+                </div>
+
+                <div class="elem-map btn"
+                     style="left:75px; top:1075px;">
+                    <p class="text-center mt-1 fw-bold">C++</p>
+                </div>
+
+                <div class="elem-map btn"
+                     style="left:75px; top:1150px;">
+                    <p class="text-center mt-1 fw-bold">C++</p>
+                </div>
+
+                <!-- Kotlin -->
+                <div class="elem-map btn"
+                     style="left:175px; top:775px;">
+                    <p class="text-center mt-1 fw-bold">Kotlin</p>
+                </div>
+
+                <div class="elem-map btn"
+                     style="left:175px; top:850px;">
+                    <p class="text-center mt-1 fw-bold">C++</p>
+                </div>
+
+                <div class="elem-map btn"
+                     style="left:175px; top:925px;">
+                    <p class="text-center mt-1 fw-bold">C++</p>
+                </div>
+
+                <div class="elem-map btn"
+                     style="left:175px; top:1000px;">
+                    <p class="text-center mt-1 fw-bold">C++</p>
+                </div>
+
+                <div class="elem-map btn"
+                     style="left:175px; top:1075px;">
+                    <p class="text-center mt-1 fw-bold">C++</p>
+                </div>
+
+                <div class="elem-map btn"
+                     style="left:175px; top:1150px;">
+                    <p class="text-center mt-1 fw-bold">C++</p>
+                </div>
+
+                <!-- PHP -->
+                <div class="elem-map btn"
+                     style="left:275px; top:775px;">
+                    <p class="text-center mt-1 fw-bold">JS</p>
+                </div>
+
+                <div class="elem-map btn"
+                     style="left:275px; top:850px;">
+                    <p class="text-center mt-1 fw-bold">C++</p>
+                </div>
+
+                <div class="elem-map btn"
+                     style="left:275px; top:925px;">
+                    <p class="text-center mt-1 fw-bold">C++</p>
+                </div>
+
+                <div class="elem-map btn"
+                     style="left:275px; top:1000px;">
+                    <p class="text-center mt-1 fw-bold">C++</p>
+                </div>
+
+                <div class="elem-map btn"
+                     style="left:275px; top:1075px;">
+                    <p class="text-center mt-1 fw-bold">C++</p>
+                </div>
+
+                <div class="elem-map btn"
+                     style="left:275px; top:1150px;">
+                    <p class="text-center mt-1 fw-bold">C++</p>
+                </div>
+
+                <!-- Java -->
+                <div class="elem-map btn"
+                     style="left:375px; top:775px;">
+                    <p class="text-center mt-1 fw-bold">Java</p>
+                </div>
+
+                <div class="elem-map btn"
+                     style="left:375px; top:850px;">
+                    <p class="text-center mt-1 fw-bold">C++</p>
+                </div>
+
+                <div class="elem-map btn"
+                     style="left:375px; top:925px;">
+                    <p class="text-center mt-1 fw-bold">C++</p>
+                </div>
+
+                <div class="elem-map btn"
+                     style="left:375px; top:1000px;">
+                    <p class="text-center mt-1 fw-bold">C++</p>
+                </div>
+
+                <div class="elem-map btn"
+                     style="left:375px; top:1075px;">
+                    <p class="text-center mt-1 fw-bold">C++</p>
+                </div>
+
+                <div class="elem-map btn"
+                     style="left:375px; top:1150px;">
+                    <p class="text-center mt-1 fw-bold">C++</p>
+                </div>
+
+                <!-- C# -->
+                <div class="elem-map btn"
+                     style="left:475px; top:775px;">
+                    <p class="text-center mt-1 fw-bold">C#</p>
+                </div>
+
+                <div class="elem-map btn"
+                     style="left:475px; top:850px;">
+                    <p class="text-center mt-1 fw-bold">C++</p>
+                </div>
+
+                <div class="elem-map btn"
+                     style="left:475px; top:925px;">
+                    <p class="text-center mt-1 fw-bold">C++</p>
+                </div>
+
+                <div class="elem-map btn"
+                     style="left:475px; top:1000px;">
+                    <p class="text-center mt-1 fw-bold">C++</p>
+                </div>
+
+                <div class="elem-map btn"
+                     style="left:475px; top:1075px;">
+                    <p class="text-center mt-1 fw-bold">C++</p>
+                </div>
+
+                <div class="elem-map btn"
+                     style="left:475px; top:1150px;">
+                    <p class="text-center mt-1 fw-bold">C++</p>
+                </div>
+
+                <!-- Python -->
+                <div class="elem-map btn"
+                     style="left:575px; top:775px;">
+                    <p class="text-center mt-1 fw-bold">Python</p>
+                </div>
+
+                <div class="elem-map btn"
+                     style="left:575px; top:850px;">
+                    <p class="text-center mt-1 fw-bold">C++</p>
+                </div>
+
+                <div class="elem-map btn"
+                     style="left:575px; top:925px;">
+                    <p class="text-center mt-1 fw-bold">C++</p>
+                </div>
+
+                <div class="elem-map btn"
+                     style="left:575px; top:1000px;">
+                    <p class="text-center mt-1 fw-bold">C++</p>
+                </div>
+
+                <div class="elem-map btn"
+                     style="left:575px; top:1075px;">
+                    <p class="text-center mt-1 fw-bold">C++</p>
+                </div>
+
+                <div class="elem-map btn"
+                     style="left:575px; top:1150px;">
+                    <p class="text-center mt-1 fw-bold">C++</p>
+                </div>
+
+                <!-- C++ -->
+                <div class="elem-map btn"
+                     style="left:675px; top:775px;">
+                    <p class="text-center mt-1 fw-bold">C++</p>
+                </div>
+
+                <div class="elem-map btn"
+                     style="left:675px; top:850px;">
+                    <p class="text-center mt-1 fw-bold">C++</p>
+                </div>
+
+                <div class="elem-map btn"
+                     style="left:675px; top:925px;">
+                    <p class="text-center mt-1 fw-bold">C++</p>
+                </div>
+
+                <div class="elem-map btn"
+                     style="left:675px; top:1000px;">
+                    <p class="text-center mt-1 fw-bold">C++</p>
+                </div>
+
+                <div class="elem-map btn"
+                     style="left:675px; top:1075px;">
+                    <p class="text-center mt-1 fw-bold">C++</p>
+                </div>
+
+                <div class="elem-map btn"
+                     style="left:675px; top:1150px;">
+                    <p class="text-center mt-1 fw-bold">C++</p>
+                </div>
+
+
+
+
+
+
 
             </div>
         </div>
